# munsha-ai

./: .env.example  .gitignore  B1_FINAL_AUDIT.md  B1_READINESS_DECISION.md  B2_FINAL_AUDIT.md  B3_BUILD_REPORT.md  B3_FINAL_AUDIT.md  B4_BUILD_REPORT.md  B5_BUILD_REPORT.md  B5_EXECUTION_ARCHITECTURE.md  B6_ARCHITECTURE_AUDIT.md  B6_ARCHITECTURE_CHECKPOINT.md  B6_BUILD_REPORT.md  B6_FINAL_AUDIT.md  B6_PORTFOLIO_ARCHITECTURE.md  B7_ARCHITECTURE_SUMMARY.md  B7_AUDIT.md  B7_BUILD_REPORT.md  B7_PERSISTENCE_ARCHITECTURE.md  B8_AUDIT.md  B8_BUILD_REPORT.md  B8_OPERATIONS_ARCHITECTURE.md  B9_ARCHITECTURE_SUMMARY.md  B9_AUDIT.md  B9_BUILD_REPORT.md  B9_INTEGRATION_ARCHITECTURE.md  B9_OWNER_POLICY_UPDATE.md  B9_OWNER_REVIEW_REPORT.md  BASELINE_STRATEGY1_REPORT.md  COMPOSITION_ENTRYPOINT_ARCHITECTURE.md  CORE_PROOF_OF_EDGE_FEASIBILITY.md  CORE_PROOF_OF_EDGE_RESULTS.md  D10_TRADINGVIEW_INTEGRATION_ARCHITECTURE.md  D11_AUDIT.md  D11_BUILD_REPORT.md  D11_EXECUTION_TARGETS_ARCHITECTURE.md  D11_OWNER_DECISIONS.md  D11_OWNER_DECISIONS_REVIEW.md  D12_TRADINGVIEW_OUTBOUND_ARCHITECTURE.md  D13_IBKR_INTEGRATION_ARCHITECTURE.md  (+72 more)
thul-nurayn/: .gitignore  README.md  pyproject.toml
thul-nurayn/db/: apply_schema.py
thul-nurayn/scripts/: provision_db.sh
thul-nurayn/src/: __init__.py
thul-nurayn/tests/: __init__.py  test_app_integration.py  test_data_access.py  test_e2e_pipeline.py  test_enums.py  test_execution.py  test_execution_targets.py  test_exit_decision.py  test_exit_pipeline.py  test_marketdata.py  (+15 more)
thul_nurayn/: README.md  __init__.py  pyproject.toml  requirements-dev.txt
(+352 files in other folders)
