[project]
name = "thul-nurayn"
version = "0.1.0"
description = "THUL-NURAYN v1 — US-equities algorithmic trading backend (B1 / D1 Foundation)"
requires-python = ">=3.11"
dependencies = []

# B1 (D1 Foundation) ships pure-stdlib code: enums, dataclasses, and SQL
# artifacts. Database drivers / frameworks are introduced in later phases.

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
